Fixed overflow of bg

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -164,6 +164,7 @@ nav a:hover {
 .parallax-bg {
 	position: absolute;
 	z-index: -1;
+	overflow: hidden;
 	
 	img {
 		max-width: 100%;
